# shopar-blender-qa

./: .gitignore  CHANGELOG.md  README.md  __init__.py  addon_updater.py  addon_updater_ops.py  build.sh  pyproject.toml  shopar_creation.py  shopar_qa.py  utils.py
